# tactile-drone-onboard

./: .gitmodules  entrypoint.sh
calibration_and_sysID/scripting/: am.py  cartesian_stiffness.py  find_max_force.py  joint_stiffness_estiamtion.py  stiffness.txt  tendon_force_config.txt  tendon_force_estiamtion.py
calibration_and_sysID/ws/src/bag2txt/: CMakeLists.txt  package.xml
calibration_and_sysID/ws/src/bag2txt/include/: converter.hpp
calibration_and_sysID/ws/src/bag2txt/src/: converter.cpp
docker/: docker-compose.yaml  entrypoint.sh  tactile-drone.dockerfile
ros2-app/: .dockerignore  Dockerfile  dockerize.sh  entrypoint.sh
ros2-app/ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2-app/ws/src/planners/: CMakeLists.txt  package.xml
ros2-app/ws/src/planners/config/: params.yaml
ros2-app/ws/src/planners/include/: contact_based_reference_finder.hpp
ros2-app/ws/src/planners/include/planners/: base_reference_position_publisher.hpp  contact_based_reference_finder.hpp  repeated_contact_based_reference_finder.hpp  varying_height_contact_based_reference_finder.hpp
ros2-app/ws/src/planners/launch/: contact_based_planner.launch.py  repeated_contact_based_planner.launch.py  varying_height_contact_based_planner.launch.py
ros2-app/ws/src/planners/src/: base_reference_position_publisher.cpp  base_reference_position_test.cpp  contact_based_reference_finder.cpp  ee_position_test.cpp  fake_wrench_publisher.cpp  repeated_contact_based_reference_finder.cpp  varying_height_contact_based_reference_finder.cpp
ros2-app/ws/src/sensors_and_observers/: CMakeLists.txt  package.xml
ros2-app/ws/src/sensors_and_observers/config/: params.yaml
ros2-app/ws/src/sensors_and_observers/include/sensors_and_observers/: encoder_node.hpp  force_estimator_node.hpp
ros2-app/ws/src/sensors_and_observers/launch/: force_estimator.launch.py
ros2-app/ws/src/sensors_and_observers/src/: encoder_node.cpp  force_estimator_node.cpp
ros2-app/ws/src/sensors_and_observers/src/cui-devices-amt-10x-driver/: cui_devices_amt10x.hpp
src/encoders/: CMakeLists.txt  package.xml
src/encoders/include/encoders/: encoder_node.hpp
src/encoders/src/: encoder_node.cpp
src/sensors_and_observers/: CMakeLists.txt  package.xml
src/sensors_and_observers/include/sensors_and_observers/: encoder_node.hpp  force_estimator.hpp  force_estimator_node.hpp
src/sensors_and_observers/launch/: force_estimator.launch.py
src/sensors_and_observers/src/: force_estimator.cpp  force_estimator_node.cpp
ws/src/sensors_and_observers/include/sensors_and_observers/: force_estimator_node.hpp
ws/src/sensors_and_observers/src/: force_estimator_node.cpp
ws/src/sensors_and_observers/src/cui-devices-amt-10x-driver/: cui_devices_amt10x.cpp  main.cpp
